MINIKUBE/minikube-pong-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-game
  labels:
    app: game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: pong-game
        image: pong-game:pygame
        ports:
        - containerPort: 8000
