MINIKUBE/minikube-todo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: todo-list
        image: to-do:web-app
        ports:
          - containerPort: 8000
