MINIKUBE/minikube-game-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-same-range-svc
spec:
  type: NodePort
  selector:
    app: game
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30008
